# teloxide

./: .gitignore  CODE_STYLE.md  Cargo.toml
examples/dialogue_bot/: Cargo.toml
examples/dialogue_bot/src/: main.rs  states.rs  transitions.rs  utils.rs
examples/ping_pong_bot/src/: main.rs
examples/simple_commands_bot/src/: main.rs
src/: lib.rs
src/bot/: api.rs  mod.rs
src/dispatching/: update_listeners.rs  update_with_cx.rs
src/net/: download.rs  mod.rs  request.rs  telegram_response.rs
src/requests/: form_builder.rs
src/requests/all/: add_sticker_to_set.rs  answer_inline_query.rs  create_new_sticker_set.rs  delete_guild_credit.rs  delete_message.rs  forward_message.rs  get_chat_member.rs  get_game_high_scores.rs  get_guild_members.rs  get_guild_roles.rs  get_private_chat.rs  get_role_members.rs  get_updates.rs  get_user_profile_photos.rs  kick_chat_member.rs  mod.rs  pin_chat_message.rs  promote_chat_member.rs  restrict_chat_member.rs  search_guild_member.rs  search_guild_member_by_username.rs  send_animation.rs  send_audio.rs  send_contact.rs  send_document.rs  send_game.rs  send_invoice.rs  send_location.rs  send_message.rs  (+16 more)
src/types/: chat.rs  chat_id.rs  chat_member.rs  chat_or_inline_message.rs  circle_comment.rs  circle_like.rs  circle_post.rs  circle_share_entity.rs  contact.rs  guild_credit.rs  guild_role.rs  inline_keyboard_button.rs  inline_query_result.rs  message.rs  mod.rs  parse_mode.rs  reply_keyboard_remove.rs  rich_text.rs  send_invoice.rs  sticker.rs  topic_share.rs  update.rs  user.rs
src/utils/: command.rs  html.rs  markdown.rs
(+1 files in other folders)
